# argot

src/: CMakeLists.txt  cmdarg.cpp  cmdarg.hpp  main.cpp
src/gui/: Makefile  design.glade  gui.cpp  gui.hpp  resources.c  windows.gresource.xml
src/network/: common.hpp  handle_client_msg.cpp  handle_select.cpp  server.cpp  server.hpp
